removed old collisions map